--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "http-status-codes": "^2.2.0",
     "mongoose": "^6.8.3",
     "morgan": "~1.9.1"
   }
