--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "fasilkom-talk",
+  "name": "be-semina",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "test:dev": "",
-    "test:pro": ""
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.0.2",
     "express": "~4.16.1",
     "http-status-codes": "^2.2.0",
-    "mongoose": "^6.8.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.1",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "mustache": "^4.2.0",
+    "nodemailer": "^6.8.0"
   }
 }
